fixed footer extra spacing on larger size screens

--- a/src/pages/Iit.css
+++ b/src/pages/Iit.css
@@ -63,7 +63,7 @@
     margin-top: 1.3vw;
     flex-direction: column;
     align-items: center;
-    /* min-height: 250vw; */
+    min-height: 125vw;
   }
   .revealMe {
     margin-top: 2.5vw;
